Remove the use of shortcode in casework service